src/test/deca/context/invalid/rvalue_assign_bool_to_int_inclass.deca
// Test la règle 3.28: 

class A  {
    boolean b = true;
    int x = b;
}



// Resultat:
//TODOTEST
